fix overlapping cards issue

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -145,14 +145,13 @@ h3{
   @media screen and (max-width : 800px),screen and (min-width:2000px),screen and (min-height:1000px){
     #page-container{
         height:100vh;
-        height: -webkit-fill-available;
     }
     .main{
         font-size: 12px;
         max-width: 1000px;
     }
     .info-wrapper{
-        height:1000px;
+        height:65vh;
         flex-direction: column;
     }
 
